--- a/student/home.html
+++ b/student/home.html
@@ -121,7 +121,7 @@
       <button onclick="logout()">Logout</button>
     </nav>
 
-    <iframe id="mainFrame" src="welcome.html"></iframe>
+    <iframe id="mainFrame" src=""></iframe>
   </div>
 
   <script>
