--- a/teacher/home.html
+++ b/teacher/home.html
@@ -1,53 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Work in Progress</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Admin Dashboard</title>
+  <link rel="stylesheet" href="../style.css">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
-      color: #333;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+    /* === Additional Admin Page Styles === */
+    .login-box {
+      background: rgba(255, 255, 255, 0.9);
+      padding: 25px 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
       text-align: center;
+      max-width: 350px;
+      width: 90%;
+      margin-top: 80px;
     }
 
-    h1 {
-      font-size: 36px;
-      color: #d9534f;
+    .login-box input {
+      width: 90%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #999;
+      border-radius: 6px;
+      font-size: 16px;
     }
 
-    p {
-      font-size: 18px;
-      margin-top: 10px;
+    .login-box button {
+      background-color: #4CAF50;
+      color: white;
+      font-weight: bold;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 16px;
     }
 
-    .loader {
+    .login-box button:hover {
+      background-color: #45a049;
+    }
+
+    .dashboard {
+      display: none;
+      width: 100%;
+      max-width: 900px;
       margin-top: 30px;
-      border: 8px solid #f3f3f3;
-      border-top: 8px solid #d9534f;
-      border-radius: 50%;
-      width: 60px;
-      height: 60px;
-      animation: spin 1s linear infinite;
+      background: rgba(255,255,255,0.9);
+      border-radius: 12px;
+      padding: 15px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
     }
 
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
+    .admin-info {
+      text-align: center;
+      color: #5a2e24;
+      font-weight: bold;
+      margin-bottom: 15px;
     }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-bottom: 10px;
+    }
+
+    nav button {
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      padding: 10px 18px;
+      font-size: 15px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s, transform 0.2s;
+    }
+
+    nav button:hover {
+      background-color: #45a049;
+      transform: scale(1.05);
+    }
+
+    iframe {
+      width: 100%;
+      height: 400px;
+      border: none;
+      border-radius: 10px;
+      background: #fff;
+    }
+/* Loader Spinner */
+.loader {
+  border: 5px solid #f3f3f3; /* Light gray */
+  border-top: 5px solid #4CAF50; /* Green */
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
   </style>
 </head>
 <body>
-  <h1>🚧 Work in Progress 🚧</h1>
-  <p>We’re working hard to bring you something awesome. Please check back soon!</p>
-  <div class="loader"></div>
+  <div class="header">
+    <h1>ADMIN DASHBOARD</h1>
+    <p><em>Manage the portal efficiently</em></p>
+  </div>
+
+  <!-- Login Box -->
+ <div class="login-box" id="loginBox">
+  <h2>Admin Login</h2>
+  <input type="text" id="adminId" placeholder="Enter Admin ID" />
+  <input type="password" id="adminPass" placeholder="Enter Password" />
+  <button onclick="login()">Login</button>
+  <p id="error" style="color:red; font-weight:bold;"></p>
+
+  <!-- Loader Spinner -->
+  <div class="spinner" id="spinner" style="display:none; margin-top:15px;">
+    <div class="loader"></div>
+  </div>
+</div>
+
+
+  <!-- Dashboard -->
+  <div class="dashboard" id="dashboard">
+    <div class="admin-info" id="adminInfo"></div>
+
+    <nav>
+      <button onclick="loadPage('home')">Home</button>
+      <button onclick="loadPage('setting')">Setting</button>
+      <button onclick="loadPage('links')">Links</button>
+      <button onclick="logout()">Logout</button>
+    </nav>
+
+    <iframe id="mainFrame"></iframe>
+  </div>
+
+  <script>
+    const apiURL = "https://script.google.com/macros/s/AKfycbxOcbtKjc05QD20Ewb8niOzbBzUUIY4zkSZ2qqWJUZRR05hBQevy0vTcCWHwmVAdYoB/exec?id=Mita";
+
+async function login() {
+  const id = document.getElementById("adminId").value.trim();
+  const pass = document.getElementById("adminPass").value.trim();
+  const error = document.getElementById("error");
+  const spinner = document.getElementById("spinner");
+
+  error.textContent = "";
+
+  if(!id || !pass) {
+    error.textContent = "Please enter Admin ID and Password";
+    return;
+  }
+
+  // Show spinner
+  spinner.style.display = "block";
+
+  try {
+    const res = await fetch(apiURL);
+    const data = await res.json();
+
+    // Hide spinner
+    spinner.style.display = "none";
+
+    if(data.Id === id && data.Password === pass) {
+      document.getElementById('loginBox').style.display = "none";
+      document.getElementById('dashboard').style.display = "block";
+      document.getElementById('adminInfo').textContent = `${data.Name} | ID: ${data.Id}`;
+      loadPage('home'); // load welcome page
+    } else {
+      error.textContent = "❌ Invalid Admin ID or Password!";
+    }
+  } catch(err) {
+    spinner.style.display = "none";
+    console.error(err);
+    error.textContent = "⚠️ Network or Server Error!";
+  }
+}
+
+
+    function loadPage(page) {
+      const frame = document.getElementById('mainFrame');
+      switch(page) {
+        case 'home':
+          frame.src = "homePage.html";
+          break;
+        case 'setting':
+          frame.src = "setting.html";
+          break;
+        case 'links':
+          frame.src = "links.html";
+          break;
+      }
+    }
+
+    function logout() {
+      document.getElementById('dashboard').style.display = "none";
+      document.getElementById('loginBox').style.display = "block";
+      document.getElementById('adminId').value = "";
+      document.getElementById('adminPass').value = "";
+      document.getElementById('mainFrame').src = "";
+      document.getElementById('error').textContent = "";
+    }
+  </script>
 </body>
 </html>
