--- a/teacher/notice.html
+++ b/teacher/notice.html
@@ -47,11 +47,8 @@
   <div class="notice-card">
     <h2>Teacher Notices</h2>
     <ul>
-      <li>Staff meeting scheduled on 25th October at 10:00 AM in the main hall.</li>
-      <li>Submit the term assessment reports by 28th October.</li>
-      <li>Update student attendance daily in the portal.</li>
-      <li>New syllabus updates have been uploaded; check the portal for details.</li>
-      <li>Annual sports day preparations begin from 1st November.</li>
+      <li>Notice.</li>
+
     </ul>
   </div>
 </body>
