--- a/teacher/home.html
+++ b/teacher/home.html
@@ -151,6 +151,7 @@
     </table>
 
     <button onclick="login()">Login</button>
+    <a href="password.html">Forget password</a>
     <p id="error" style="color:red; font-weight:bold;"></p>
 
     <!-- Loader Spinner -->
