--- a/teacher/password.html
+++ b/teacher/password.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Password Recovery - Teacher</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../style.css" />
   <style>
-    /* === Password Recovery Page Styles === */
     .recovery-box {
-      background: rgba(255, 255, 255, 0.9);
+      background: rgba(255, 255, 255, 0.95);
       padding: 25px 20px;
       border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.25);
       text-align: center;
-      max-width: 380px;
-      width: 90%;
-      margin-top: 100px;
+      max-width: 420px;
+      width: 92%;
+      margin: 100px auto;
     }
 
     .recovery-box input {
@@ -43,7 +42,6 @@
       background-color: #45a049;
     }
 
-    /* Loader Spinner */
     .loader {
       border: 5px solid #f3f3f3;
       border-top: 5px solid #4CAF50;
@@ -51,7 +49,7 @@
       width: 40px;
       height: 40px;
       animation: spin 1s linear infinite;
-      margin: 0 auto;
+      margin: 10px auto;
     }
 
     @keyframes spin {
@@ -60,26 +58,21 @@
     }
 
     .message {
-      margin-top: 10px;
+      margin-top: 12px;
       font-weight: bold;
       color: #5a2e24;
+      min-height: 1.2em;
     }
 
-    .error {
-      color: red;
-    }
-
+    .error { color: red; }
     .back-link {
-      margin-top: 15px;
+      margin-top: 14px;
       display: inline-block;
       text-decoration: none;
       font-weight: bold;
       color: #4CAF50;
     }
-
-    .back-link:hover {
-      text-decoration: underline;
-    }
+    .back-link:hover { text-decoration: underline; }
   </style>
 </head>
 <body>
@@ -90,11 +83,13 @@
 
   <div class="recovery-box">
     <h2>Forgot Password?</h2>
-    <p>Enter your registered email address below</p>
-    <input type="email" id="email" placeholder="Enter your email" />
-    <button onclick="recoverPassword()">Recover Password</button>
+    <p>Enter your registered email address below:</p>
 
-    <div class="spinner" id="spinner" style="display:none; margin-top:15px;">
+    <input type="email" id="email" placeholder="Enter your email" required />
+
+    <button id="recoverBtn" onclick="recoverPassword()">Recover Password</button>
+
+    <div id="spinner" style="display:none;">
       <div class="loader"></div>
     </div>
 
@@ -104,37 +99,44 @@
   </div>
 
   <script>
-    async function recoverPassword() {
-      const email = document.getElementById('email').value.trim();
-      const msg = document.getElementById('message');
-      const spinner = document.getElementById('spinner');
-      msg.textContent = "";
+    const API_URL = "https://script.google.com/macros/s/AKfycbwJeGHegSXFr5GNuOUsvHxALBN-Lh9OLMpJtRNTHoJ8oyMOFBwAhatQkIoGz5FiAAfB/exec";
 
+    async function recoverPassword() {
+      const email = document.getElementById("email").value.trim();
+      const msg = document.getElementById("message");
+      const spinner = document.getElementById("spinner");
+      const button = document.getElementById("recoverBtn");
+
+      msg.textContent = "";
       if (!email) {
         msg.textContent = "⚠️ Please enter your email.";
-        msg.classList.add('error');
+        msg.classList.add("error");
         return;
       }
 
       spinner.style.display = "block";
+      button.disabled = true;
 
       try {
-        const res = await fetch(`https://script.google.com/macros/s/AKfycbwJeGHegSXFr5GNuOUsvHxALBN-Lh9OLMpJtRNTHoJ8oyMOFBwAhatQkIoGz5FiAAfB/exec?${encodeURIComponent(email)}`);
-        const data = await res.json();
+        const response = await fetch(`${API_URL}?email=${encodeURIComponent(email)}`);
+        const data = await response.json();
+
         spinner.style.display = "none";
+        button.disabled = false;
 
         if (data.success) {
           msg.textContent = `✅ ${data.message}`;
-          msg.classList.remove('error');
+          msg.classList.remove("error");
         } else {
-          msg.textContent = "❌ Email not found in our records.";
-          msg.classList.add('error');
+          msg.textContent = `❌ ${data.message || "Email not found in our record."}`;
+          msg.classList.add("error");
         }
-      } catch (error) {
+      } catch (err) {
         spinner.style.display = "none";
-        console.error(error);
-        msg.textContent = "⚠️ Network or server error.";
-        msg.classList.add('error');
+        button.disabled = false;
+        msg.textContent = "⚠️ Network or server error. Please try again.";
+        msg.classList.add("error");
+        console.error(err);
       }
     }
   </script>
